@@ -1,0 +1,1 @@
+gtk-font-name = "Arimo 11"
